# PixcelClean

./: .gitignore  README.md  index.html  oklab.html  package-lock.json  package.json  vite.config.ts
docs/: glow-extraction-design.md
src/: App.tsx  backgroundAnalysis.worker.ts  imageProcessing.ts  imageProcessing.worker.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/algorithms/: README.md  adaptiveBackgroundThresholds.ts  backgroundColorEstimation.ts  backgroundMaskGeneration.ts  backgroundRemoval.ts  classifyBackgroundDistances.ts  colorSpace.ts  directionalBackgroundDistance.ts  edgeGlowReconstruction.ts  localColorIslands.ts  oklabDistanceDistribution.ts  paletteReduction.ts  processImage.ts  types.ts
src/components/: ImageViewport.tsx  ThresholdControl.tsx
src/editor/: projectMemory.ts  protectionMask.ts
src/oklab/: OKLabLearningApp.tsx  main.tsx  styles.css
src/pipeline/: backgroundAnalysis.ts  backgroundAnalysisProtocol.ts
tests/algorithms/: adaptiveBackgroundThresholds.unit.test.mjs  backgroundAnalysisPipeline.unit.test.mjs  backgroundColorEstimation.fixture.test.mjs  backgroundColorEstimation.unit.test.mjs  backgroundMaskGeneration.unit.test.mjs  classifyBackgroundDistances.unit.test.mjs  directionalBackgroundDistance.unit.test.mjs  edgeGlowReconstruction.unit.test.mjs  localColorIslands.unit.test.mjs  oklabDistanceDistribution.unit.test.mjs  projectMemory.unit.test.mjs
tests/scripts/: inspectAdaptiveThresholds.mjs  (+3 more)
(+1 files in other folders)
