[package]
name = "pixel-clean"
version = "2.0.0-alpha.1"
description = "Local pixel image cleaning tool"
authors = ["Pixel Clean"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
